Fix alignment

--- a/src/module/commons/src/create/escoEntryType.scss
+++ b/src/module/commons/src/create/escoEntryType.scss
@@ -1,7 +1,6 @@
 .escoEntryType__inputBlocks {
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left:0;
 }
 
 .escoEntryType--fileLabelVisible .escoEntryType__inputBlocks,
@@ -16,7 +15,7 @@
 }
 
 .escoEntryType__file {
-    margin-top: -9px;
+    margin-top: 28px;
 }
 
 .escoEntryType__fileUploadButton {
@@ -62,6 +61,6 @@
     }
 }
 
-.escoEntryType__file>div{
-    width: 80%;
+.escoEntryType__file > div{
+    width: 60%;
 }
