--- a/src/module/commons/src/dialog/dialog.scss
+++ b/src/module/commons/src/dialog/dialog.scss
@@ -220,6 +220,7 @@
 
 .modal-dialog {
     margin: 120px auto;
+    max-width: 850px;
 }
 
 .confirmDialog .modal-body {
